# judy-fk

./: AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README  README.md  configure.ac  judy-fk.spec  judyfk.spec
cmake/: FindJudy.cmake
src/: JudySLFK.c  JudySLFK.h  Makefile.am
